Add revision for vote comments and optimize code